@@ -593,36 +593,6 @@ name|conf
 operator|.
 name|get
 argument_list|(
-name|SCAN_CACHEBLOCKS
-argument_list|)
-operator|!=
-literal|null
-condition|)
-block|{
-name|scan
-operator|.
-name|setCacheBlocks
-argument_list|(
-name|Boolean
-operator|.
-name|parseBoolean
-argument_list|(
-name|conf
-operator|.
-name|get
-argument_list|(
-name|SCAN_CACHEBLOCKS
-argument_list|)
-argument_list|)
-argument_list|)
-expr_stmt|;
-block|}
-if|if
-condition|(
-name|conf
-operator|.
-name|get
-argument_list|(
 name|SCAN_CACHEDROWS
 argument_list|)
 operator|!=
@@ -647,6 +617,23 @@ argument_list|)
 argument_list|)
 expr_stmt|;
 block|}
+comment|// false by default, full table scans generate too much BC churn
+name|scan
+operator|.
+name|setCacheBlocks
+argument_list|(
+operator|(
+name|conf
+operator|.
+name|getBoolean
+argument_list|(
+name|SCAN_CACHEBLOCKS
+argument_list|,
+literal|false
+argument_list|)
+operator|)
+argument_list|)
+expr_stmt|;
 block|}
 catch|catch
 parameter_list|(
